assets/main.css
html,
body,
#main {
    width: 100%;
    height: 100%;
    margin: 0;
    overflow: hidden;
}

* {
    scrollbar-width: none;
    -ms-overflow-style: none;
}

*::-webkit-scrollbar {
    width: 0;
    height: 0;
    display: none;
}

body,
button,
input,
select,
textarea {
    font-family: "Segoe UI", "Microsoft YaHei", system-ui, sans-serif;
}

svg {
    display: inline-block;
    flex-shrink: 0;
}

.bg-primary-content {
    background-color: var(--color-primary-content);
}

